--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@pollum-io/sdk-core",
+  "name": "temp/sdk-core",
   "license": "MIT",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "description": "⚒️ An SDK for building applications on top of Pegasys V2",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
