--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sdkcore",
+  "name": "sdkcore18",
   "license": "MIT",
   "version": "0.0.1",
   "description": "⚒️ An SDK for building applications on top of Pegasys V2",
