--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pollum-io/v3-sdk",
+  "name": "v3sdk18",
   "license": "MIT",
   "publishConfig": {
     "access": "public"
@@ -26,16 +26,16 @@
   "dependencies": {
     "@ethersproject/abi": "^5.0.12",
     "@ethersproject/solidity": "^5.0.9",
-    "@pollum-io/sdk-core": "0.0.3",
-    "@pollum-io/swap-router-contracts": "0.0.4",
-    "@pollum-io/v3-periphery": "0.0.1",
-    "@pollum-io/v3-staker": "0.0.1",
+    "sdkcore18": "0.0.1",
+    "@uniswap/swap-router-contracts": "^1.2.1",
+    "@uniswap/v3-periphery": "^1.1.1",
+    "@uniswap/v3-staker": "1.0.0",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
-    "@pollum-io/v3-core": "0.0.1",
+    "@uniswap/v3-core": "1.0.0",
     "tsdx": "^0.14.1"
   },
   "engines": {
