--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@pollum-io/router-sdk",
-  "version": "0.0.2",
+  "name": "routersdk18",
+  "version": "0.0.1",
   "description": "An sdk for routing swaps using Pegasys v1 and Pegasys v2.",
   "publishConfig": {
     "access": "public"
@@ -27,10 +27,9 @@
   "license": "MIT",
   "dependencies": {
     "@ethersproject/abi": "^5.5.0",
-    "@pollum-io/sdk-core": "0.0.3",
-    "@pollum-io/swap-router-contracts": "0.0.4",
-    "@pollum-io/v1-sdk": "0.0.2",
-    "@pollum-io/v2-sdk": "0.0.2"
+    "sdkcore18": "0.0.1",
+    "@uniswap/swap-router-contracts": "^1.1.0",
+    "v3sdk18": "0.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.25",
