--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@pollum-io/smart-order-router",
-  "version": "0.0.24",
+  "name": "smartorderrouter18",
+  "version": "0.0.1",
   "description": "Pegasys Smart Order Router",
   "main": "build/main/index.js",
   "typings": "build/main/index.d.ts",
@@ -15,11 +15,11 @@
   "license": "GPL",
   "keywords": [],
   "scripts": {
-    "compile-v3-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@pollum-io/?(v3-core|v3-periphery)/artifacts/contracts/**/*.json'",
-    "compile-v2-types": "npx typechain --target ethers-v5 --out-dir src/types/v2 './node_modules/@pollum-io/pegasys-protocol/artifacts/contracts/pegasys-core/interfaces/IPegasysPair.sol/IPegasysPair.json'",
-    "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@pollum-io/swap-router-contracts/artifacts/contracts/**/*.json'",
+    "compile-v3-core-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/v3-core/artifacts/contracts/**/*.json'",
+    "compile-v3-periphary-types": "npx typechain --target ethers-v5 --out-dir src/types/v3 './node_modules/@uniswap/v3-periphery/artifacts/contracts/**/*.json'",
+    "compile-router": "npx typechain --target ethers-v5 --out-dir src/types/other './node_modules/@uniswap/swap-router-contracts/artifacts/contracts/**/*.json'",
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir src/types/other 'src/abis/**/*.json'",
-    "build": "run-p compile-v3-types compile-v2-types compile-router compile-external-types && run-p build:*",
+    "build": "run-p compile-v3-core-types compile-v3-periphary-types compile-router compile-external-types && run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "fix": "run-s fix:*",
@@ -33,15 +33,9 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@pollum-io/default-token-list": "latest",
-    "@pollum-io/router-sdk": "0.0.6",
-    "@pollum-io/swap-router-contracts": "0.0.5",
-    "@pollum-io/universal-router": "0.0.6",
-    "@pollum-io/universal-router-sdk": "0.0.9",
-    "@pollum-io/v1-sdk": "0.0.10",
-    "@pollum-io/v3-sdk": "0.0.2",
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/token-lists": "^1.0.0-beta.25",
+    "@uniswap/swap-router-contracts": "^1.3.1",
+    "@uniswap/universal-router": "^1.6.0",
     "async-retry": "^1.3.1",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
@@ -53,7 +47,13 @@
     "lodash": "^4.17.21",
     "mnemonist": "^0.38.3",
     "node-cache": "^5.1.2",
-    "stats-lite": "^2.2.0"
+    "routersdk18": "0.0.1",
+    "sdkcore18": "^0.0.1",
+    "stats-lite": "^2.2.0",
+    "udonswap-default-token-list": "1.0.0",
+    "udonswap-token-lists": "1.0.0",
+    "universalroutersdk18": "0.0.1",
+    "v3sdk18": "0.0.1"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.4.0",
@@ -61,9 +61,6 @@
     "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@oclif/command": "^1.8.0",
     "@oclif/errors": "^1.3.5",
-    "@pollum-io/pegasys-protocol": "0.0.17",
-    "@pollum-io/v3-core": "0.0.1",
-    "@pollum-io/v3-periphery": "0.0.1",
     "@typechain/ethers-v5": "^7.0.1",
     "@types/async-retry": "^1.4.4",
     "@types/await-timeout": "^0.3.1",
@@ -77,6 +74,8 @@
     "@types/stats-lite": "^2.2.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "@uniswap/v3-core": "^1.0.0",
+    "@uniswap/v3-periphery": "^1.1.1",
     "bunyan-debug-stream": "^2.0.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.8.0",
