--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pollum-io/routing-api",
+  "name": "routingapi18",
   "version": "0.0.1",
   "bin": {
     "app": "./dist/bin/app.js"
@@ -8,7 +8,7 @@
   "repository": "https://github.com/pegasys-fi/routing-api",
   "scripts": {
     "compile-external-types": "npx typechain --target ethers-v5 --out-dir lib/types/ext 'lib/abis/**/*.json'",
-    "compile-v3-contract-types": "typechain --target ethers-v5 --out-dir src/types/v3 \"./node_modules/@pollum-io/v3-periphery/artifacts/contracts/**/*.json\"",
+    "compile-v3-contract-types": "typechain --target ethers-v5 --out-dir src/types/v3 \"./node_modules/@uniswap/v3-periphery/artifacts/contracts/**/*.json\"",
     "build": "run-p compile-external-types compile-v3-contract-types && tsc",
     "clean": "rm -rf dist cdk.out",
     "watch": "tsc -w",
@@ -68,14 +68,13 @@
     "@middy/input-output-logger": "^2.4.1",
     "@middy/validator": "^2.4.1",
     "@pinata/sdk": "^1.1.23",
-    "@pollum-io/default-token-list": "latest",
-    "@pollum-io/router-sdk": "0.0.6",
-    "@pollum-io/sdk-core": "0.0.3",
-    "@pollum-io/smart-order-router": "0.0.24",
-    "@pollum-io/universal-router-sdk": "0.0.9",
-    "@pollum-io/v1-sdk": "0.0.10",
-    "@pollum-io/v3-periphery": "0.0.1",
-    "@pollum-io/v3-sdk": "0.0.2",
+    "udonswap-default-token-list": "1.0.0",
+    "routersdk18": "0.0.1",
+    "sdkcore18": "0.0.1",
+    "smartorderrouter18": "0.0.1",
+    "universalroutersdk18": "0.0.1",
+    "@uniswap/v3-periphery": "^1.4.4",
+    "v3sdk18": "0.0.1",
     "@typechain/ethers-v5": "^7.0.1",
     "@types/async-retry": "^1.4.2",
     "@types/chai-subset": "^1.3.3",
@@ -83,7 +82,7 @@
     "@types/sinon": "^10.0.6",
     "@types/stats-lite": "^2.2.0",
     "@uniswap/permit2-sdk": "^1.2.0",
-    "@uniswap/token-lists": "^1.0.0-beta.24",
+    "udonswap-token-lists": "1.0.0",
     "async-retry": "^1.3.1",
     "aws-cdk-lib": "^2.24.1",
     "aws-embedded-metrics": "^2.0.6",
